<resources>
    <string name="app_name" translatable="false">IntelliCare</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="copy_rights" translatable="false">&#169; 2021, IntelliCare Medical Group</string>
    <string name="login_heading" translatable="false">Welcome to Intellicare</string>
    <string name="enter_first_name">First name</string>
    <string name="enter_last_name">Last name</string>
    <string name="select_date_of_birth">Date of birth</string>
    <string name="enter_mobile_phone_number">Mobile phone number</string>
    <string name="btn_continue">Continue</string>
    <string name="hint_dob2_mm_dd_yyyy" translatable="false">MM/DD/YYYY</string>
    <string name="hint_phone_number_format_1" translatable="false">(123) 456-7890</string>
    <string name="have_you_received_a_verification_code" translatable="false">Have you received a verification code?</string>
    <string name="we_have_sent_you_an_sms_with_a_code_to" translatable="false">We have sent you an SMS with a code to </string>
    <string name="enter_5_digits_code">Enter 5 digits code</string>
    <string name="resend_code"><u>Resend Code</u></string>
    <string name="change_mobile_phone_number" translatable="false">Change Mobile Phone Number</string>
    <string name="change_mobile_number"><u>Change mobile number</u></string>
    <string name="register_with_us" translatable="false">Register with us</string>
    <string name="user_form_sub_heading">Please complete the following information before you can create a virtual visit.</string>
    <string name="registration_heading">Registration for New Patient</string>
    <string name="fields_note">Fields marked with an <font color='#FF4455'>*</font> are required.</string>
    <string name="fields_error_note">Please provide all the fields marked with an (<font color='#FF4455'>*</font>).</string>
    <string name="first_name">First name</string>
    <string name="first_name_star">First name <font color='#FF4455'>*</font></string>
    <string name="middle_name">Middle name</string>
    <string name="middle_name_star">Middle name <font color='#FF4455'>*</font></string>
    <string name="last_name">Last name</string>
    <string name="last_name_star">Last name <font color='#FF4455'>*</font></string>
    <string name="date_of_birth">Date of birth</string>
    <string name="date_of_birth_star">Date of birth <font color='#FF4455'>*</font></string>
    <string name="select_gender">Gender</string>
    <string name="select_gender_star">Gender <font color='#FF4455'>*</font></string>
    <string name="mobile_phone">Mobile phone number</string>
    <string name="mobile_phone_star">Mobile phone number <font color='#FF4455'>*</font></string>
    <string name="email">Email</string>
    <string name="email_star">Email <font color='#FF4455'>*</font></string>
    <string name="agree_to_intellicare_legal_terms">I agree to Intellicare Legal Terms </string>
    <string name="agree_to_hipaa_terms">I agree to HIPAA Terms </string>
    <string name="insurance_card_photo">Insurance card front</string>
    <string name="insurance_card_photo_star">Insurance card front <font color='#FF4455'>*</font></string>
    <string name="insurance_card_photo_back">Insurance card back</string>
    <string name="insurance_card_photo_back_star">Insurance card back <font color='#FF4455'>*</font></string>
    <string name="driving_license_photo">Driving license</string>
    <string name="driving_license_photo_star">Driving license <font color='#FF4455'>*</font></string>
    <string name="current_medication_photo">Current medication</string>
    <string name="current_medication_photo_star">Current medication <font color='#FF4455'>*</font></string>
    <string name="official_photo">Official photo ID</string>
    <string name="official_photo_star">Official photo ID <font color='#FF4455'>*</font></string>
    <string name="nearest_pharmacy">Nearest Pharmacy <font color='#FF4455'>*</font></string>
    <string name="enter_otp" translatable="false">Enter OTP sent to </string>
    <string name="verify" translatable="false">Verify</string>
    <string name="submit">Submit</string>
    <string name="start" translatable="false">Start</string>
    <string name="ten_nines" translatable="false">9999999999</string>
    <string name="five_zeros" translatable="false">00000</string>
    <string name="random_phone" translatable="false">9876543210</string>
    <string name="enter_last_name_of_primary" translatable="false">Enter Last Name of Primary Member:</string>
    <string name="select_date_of_birth_mmddyyyy" translatable="false">Select Date Of Birth (MM-DD-YYYY):</string>
    <string name="dob_mm_dd_yyyy" translatable="false">MM-DD-YYYY</string>
    <string name="date_of_birth_mm_dd_yyyy" translatable="false">Date Of Birth(MM-DD-YYYY)</string>
    <string name="sorry_title" translatable="false">We are sorry!</string>
    <string name="sorry_alert" translatable="false">System failed to verify your membership. Your information has been routed to one of our care coordinators. They are checking with your medical group and will get in touch with you shortly.
</string>
    <string name="agora_app_id" translatable="false">f4192527912545d88918d6c3d7f9c821</string>
    <string name="agora_access_token" translatable="false">006f4192527912545d88918d6c3d7f9c821IAC56smZVMmMmq8fdt2B5kCmavB3vY3bSWSqi2rqIebnqyD9vKcAAAAAIgCLYQAAFGEqYAQAAQCkHSlgAwCkHSlgAgCkHSlgBACkHSlg</string>
    <string name="start_visit" translatable="false">Start Visit</string>
    <string name="rescan_card" translatable="false"><u>Re-scan Card</u></string>
    <string name="visit_details" translatable="false"><u>Visit Details</u></string>
    <string name="logout">Logout</string>
    <string name="logout_u" translatable="false"><u>Logout</u></string>
    <string name="close" translatable="false"><u>CLOSE</u></string>
    <string name="switch_card" translatable="false"><u>Switch Card</u></string>
    <string name="team_care_ipa" translatable="false">Team Care IPA</string>
    <string name="skip"><u>Skip</u></string>
    <string name="phone_hint2" translatable="false">(999) 999-9999</string>
    <string name="member_id">Member ID</string>
    <string name="member_id_star" translatable="false">Member ID <font color='#FF4455'>*</font></string>
    <string name="membership_card_photo" translatable="false">Membership Card Photo</string>
    <string name="membership_card_photo_star" translatable="false">Membership Card Photo <font color='#FF4455'>*</font></string>
    <string name="member_photo" translatable="false">Member Photo</string>
    <string name="member_photo_star" translatable="false">Member Photo <font color='#FF4455'>*</font></string>
    <string name="html_text_red" translatable="false">This is <font color='#FF4455'>simple</font></string>
    <string name="html_text_blue" translatable="false">This is <font color='#4455FF'>*</font></string>
    <string name="default_notification_channel_id" translatable="false">IntelliCare</string>
    <string name="device_density" translatable="false">default</string>
    <string name="cancel_consultation" translatable="false"><u>Cancel consultation</u> </string>
    <string name="b_last_consultation_b_nmon_2_feb_2021_02_29pm" translatable="false"><b>Last Consultation</b>\nMon, 2 Feb 2021 02:29PM</string>
    <string name="login_heading2">If experiencing a medical emergency, you should immediately seek emergency care by calling 911</string>
    <string name="about_login"><u>About the service and eligibility</u></string>
    <string name="please_check_your_message_text">Please check your message. We sent a one-time password to mobile no:</string>
    <string name="note_otp_screen_text">Note: Repeat patients need to use their registered mobile phone number.</string>
    <string name="chief_complaint">Chief complaint <font color='#FF4455'>*</font></string>
    <string name="create_consultation">Create Consultation</string>
    <string name="back">Back</string>
    <string name="formatted_engage_visit_description_bkp" translatable="false"><![CDATA[<p></p>
        <p style=\'margin:0in;margin-bottom:.0001pt;font-size:16px;font-family:"Calibri","sans-serif";text-align:justify;line-height:115%;\'><span style=\'font-family:"Calibri","sans-serif";color:#03356A;\'>Your wait time is shown below. The provider will send a notification when she/he is ready to see you. The button below will change to "Engage". You will then have 3 minutes to start a consult. If you miss the window, the provider will see the next patient in the queue and notify you again when she/he is ready to see you.<br /></span></p>
        <p style=\'margin:0in;margin-bottom:.0001pt;font-size:16px;font-family:"Calibri","sans-serif";text-align:justify;line-height:115%;\'><span style=\'font-family:"Calibri","sans-serif";color:#03356A;\'><br /></span></p>
        <p style=\'margin:0in;margin-bottom:.0001pt;font-size:16px;font-family:"Calibri","sans-serif";text-align:justify;line-height:115%;\'><span style=\'font-family:"Calibri","sans-serif";color:#03356A;\'>You may cancel this visit any time and come back later.</span></p>
        <p style=\'margin:0in;margin-bottom:.0001pt;font-size:16px;font-family:"Calibri","sans-serif";text-align:justify;line-height:115%;\'><span style=\'font-family:"Calibri","sans-serif";color:#03356A;\'><br /></span></p>
        <p style=\'margin:0in;margin-bottom:.0001pt;font-size:16px;font-family:"Calibri","sans-serif";text-align:justify;line-height:115%;\'><span style=\'font-family:"Calibri","sans-serif";color:#03356A;\'>When you engage with the provider, you have the option of just doing an audio-only visit. You will see the provider, but you need to opt-in for the provider to see you.<br /></span></p>
        <p style=\'margin:0in;margin-bottom:.0001pt;font-size:16px;font-family:"Calibri","sans-serif";text-align:justify;line-height:115%;\'><span style=\'font-family:"Calibri","sans-serif";color:#03356A;\'><br /></span></p>
        <p><span style=\'font-size:16px;font-family:"Calibri","sans-serif";color:#03356A;\'>If a medication is needed, the provider will send that to your chosen pharmacy. You can update your pharmacy using "Manage Information" below or let the provider know your closest pharmacy.</span></p>]]>
    </string>
    <string name="formatted_capture_pic_insurance_card_description_bkp" translatable="false">
        <![CDATA[
            <p>Capture a picture of your insurance card.</p>
            <p>&nbsp;&nbsp;&bull&nbsp;Place card on a desk on a dark-colored surface that\'s</p>
            <p>&nbsp;&nbsp;&nbsp;&nbsp;not reflective and is well lit</p>
            <p>&nbsp;&nbsp;&bull&nbsp;Position camera directly over the card (not angled)</p>
            <p>&nbsp;&nbsp;&bull&nbsp;Fit all four corners inside the guides</p>
        ]]>
    </string>
    <string name="contact_us">Contact Us</string>
    <string name="feedback_experience">Rate your consultation experience</string>
    <string name="feedback_hint">Provide a written review</string>
    <string name="settings">Settings</string>
    <string name="preferred_language">Preferred Language</string>
    <string name="english">English</string>
    <string name="espanol">Español</string>
    <string name="telehealth_consent">Telehealth Consent</string>
    <string name="terms_and_conditions">Terms &amp; Conditions</string>
</resources>