<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.login.LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="4dp"
        android:background="@drawable/ic_intelli_logo_normal" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/llMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingLeft="@dimen/main_padding"
            android:paddingRight="@dimen/main_padding"
            android:paddingBottom="@dimen/main_padding">

            <TextView
                android:id="@+id/tvHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top_margin_to_logo"
                android:text="@string/login_heading"
                android:textColor="@color/primary"
                android:textSize="@dimen/heading_text_size_login"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvSubHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top_margin_to_logo"
                android:textColor="@color/primary"
                android:visibility="gone"
                tools:text="Sub heading" />

            <TextView
                style="@style/LoginLabelTextStyle"
                android:text="@string/enter_first_name" />

            <EditText
                android:id="@+id/etFirstName"
                style="@style/LoginEditTextStyle"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:imeOptions="actionNext"
                android:inputType="textCapWords"
                android:maxLength="20"
                android:text="Virat"
                android:singleLine="true"
                android:maxLines="1" />

            <TextView
                style="@style/LoginLabelTextStyle"
                android:text="@string/enter_last_name" />

            <EditText
                android:id="@+id/etLastName"
                style="@style/LoginEditTextStyle"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:imeOptions="actionNext"
                android:inputType="textCapWords"
                android:maxLength="20"
                android:singleLine="true"
                android:maxLines="1"
                android:text="Testnew" />

            <TextView
                style="@style/LoginLabelTextStyle"
                android:text="@string/select_date_of_birth" />

            <EditText
                android:id="@+id/etDOB"
                style="@style/LoginEditTextStyle"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/hint_dob2_mm_dd_yyyy"
                android:inputType="none"
                android:maxLength="20"
                android:singleLine="true"
                android:maxLines="1"
                android:text="12/24/2010" />

            <TextView
                style="@style/LoginLabelTextStyle"
                android:text="@string/enter_mobile_phone_number" />

            <EditText
                android:id="@+id/etPhoneNumber"
                style="@style/LoginEditTextStyle"
                android:hint="@string/hint_phone_number_format_1"
                android:inputType="phone"
                android:maxLength="14"
                android:maxLines="1"
                android:text="(888) 888-9999" />

            <Button
                android:id="@+id/btnGetOTP"
                style="@style/AppTheme.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/label_to_label_margin_login"
                android:enabled="true"
                android:padding="@dimen/primary_button_padding"
                android:text="@string/btn_continue"
                android:textAllCaps="false"
                android:textSize="@dimen/primary_button_text_size" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>