<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@color/white"
    android:keepScreenOn="true"
    android:orientation="vertical"
    android:paddingLeft="@dimen/min_padding"
    android:paddingRight="@dimen/min_padding"
    android:paddingBottom="@dimen/main_padding"
    tools:context=".view.feedback.FeedbackActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="4dp"
            android:background="@drawable/ic_intelli_logo_normal" />

        <!--<TextView
            android:id="@+id/tvSkip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="8dp"
            android:text="@string/skip"
            android:textColor="@color/bg_green"
            android:textSize="16sp"
            android:textStyle="bold" />-->
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/feedback_experience"
        android:textColor="@color/primary"
        android:textSize="16sp"
        android:textStyle="bold" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:numStars="5"
        android:stepSize="1" />

    <TextView
        android:id="@+id/tvRatingScale"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="4dp"
        android:textColor="@color/primary"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/feedback_hint"
        android:textColor="@color/primary"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etFeedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_bg"
        android:gravity="top"
        android:inputType="textMultiLine|textCapSentences"
        android:lines="5"
        android:padding="4dp" />

    <Button
        android:id="@+id/btnSubmit"
        style="@style/AppTheme.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvSkip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/skip"
        android:textColor="@color/primary"
        android:textSize="16sp"
        android:textStyle="bold" />
</LinearLayout>